[gd_scene load_steps=12 format=2]

[ext_resource path="res://clouds/CloudVolumeRendererSpatial.gdshader" type="Shader" id=1]
[ext_resource path="res://addons/maujoe.camera_control/scripts/camera_control.gd" type="Script" id=2]
[ext_resource path="res://clouds/CloudNoiseCreation2.gd" type="Script" id=3]

[sub_resource type="QuadMesh" id=8]
size = Vector2( 2, 2 )

[sub_resource type="ShaderMaterial" id=11]
shader = ExtResource( 1 )

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]

[sub_resource type="Image" id=12]
data = {
"data": PoolByteArray( 223, 224, 224, 255, 220, 224, 223, 255, 227, 227, 222, 255, 233, 229, 222, 255, 235, 232, 222, 255, 233, 237, 221, 255, 227, 240, 219, 255, 220, 242, 221, 255, 212, 245, 223, 255, 213, 247, 225, 255, 217, 245, 226, 255, 218, 240, 227, 255, 217, 237, 226, 255, 213, 240, 225, 255, 212, 245, 223, 255, 211, 249, 222, 255, 208, 252, 222, 255, 207, 247, 222, 255, 215, 242, 222, 255, 224, 236, 222, 255, 233, 230, 221, 255, 239, 229, 219, 255, 243, 230, 218, 255, 239, 229, 217, 255, 233, 232, 216, 255, 231, 234, 215, 255, 237, 235, 214, 255, 240, 234, 212, 255, 237, 232, 209, 255, 231, 228, 206, 255, 221, 226, 226, 255, 215, 229, 225, 255, 220, 232, 224, 255, 224, 235, 222, 255, 225, 236, 222, 255, 224, 235, 221, 255, 220, 236, 221, 255, 215, 242, 221, 255, 213, 247, 224, 255, 219, 252, 226, 255, 223, 247, 227, 255, 224, 242, 227, 255, 223, 240, 227, 255, 219, 245, 226, 255, 213, 247, 224, 255, 210, 246, 222, 255, 208, 247, 223, 255, 209, 245, 224, 255, 212, 240, 223, 255, 220, 235, 222, 255, 227, 229, 221, 255, 233, 225, 221, 255, 235, 227, 220, 255, 233, 230, 218, 255, 227, 234, 217, 255, 229, 237, 216, 255, 235, 238, 215, 255, 237, 237, 213, 255, 235, 234, 210, 255, 229, 230, 207, 255, 218, 230, 227, 255, 210, 232, 226, 255, 214, 237, 225, 255, 219, 240, 223, 255, 223, 242, 222, 255, 224, 240, 223, 255, 223, 237, 224, 255, 219, 240, 223, 255, 217, 245, 223, 255, 223, 247, 225, 255, 227, 245, 226, 255, 229, 240, 227, 255, 227, 242, 226, 255, 223, 247, 225, 255, 217, 252, 224, 255, 209, 247, 224, 255, 213, 243, 225, 255, 217, 240, 226, 255, 218, 237, 225, 255, 217, 232, 224, 255, 220, 229, 222, 255, 224, 226, 222, 255, 225, 229, 221, 255, 224, 232, 219, 255, 220, 235, 217, 255, 224, 238, 216, 255, 229, 240, 215, 255, 231, 238, 213, 255, 229, 235, 210, 255, 224, 231, 208, 255, 212, 236, 227, 255, 210, 236, 227, 255, 217, 240, 226, 255, 223, 245, 224, 255, 227, 247, 224, 255, 229, 245, 225, 255, 227, 240, 226, 255, 223, 237, 225, 255, 218, 240, 224, 255, 224, 242, 224, 255, 229, 240, 225, 255, 231, 237, 226, 255, 229, 240, 227, 255, 224, 245, 226, 255, 218, 247, 225, 255, 213, 245, 225, 255, 219, 240, 226, 255, 223, 236, 227, 255, 224, 235, 226, 255, 223, 234, 225, 255, 219, 232, 223, 255, 215, 228, 222, 255, 216, 230, 221, 255, 215, 233, 219, 255, 213, 234, 217, 255, 218, 237, 216, 255, 221, 238, 215, 255, 223, 237, 213, 255, 221, 234, 210, 255, 218, 230, 207, 255, 214, 242, 227, 255, 216, 240, 226, 255, 218, 242, 225, 255, 224, 247, 225, 255, 229, 252, 226, 255, 231, 247, 226, 255, 229, 242, 227, 255, 224, 237, 226, 255, 218, 237, 225, 255, 223, 237, 224, 255, 227, 235, 226, 255, 229, 233, 227, 255, 227, 237, 227, 255, 223, 240, 227, 255, 217, 242, 226, 255, 217, 240, 226, 255, 223, 237, 227, 255, 227, 237, 227, 255, 229, 238, 227, 255, 227, 237, 226, 255, 223, 234, 224, 255, 217, 230, 222, 255, 209, 229, 221, 255, 206, 232, 219, 255, 205, 233, 219, 255, 210, 234, 218, 255, 213, 235, 217, 255, 215, 234, 214, 255, 216, 232, 212, 255, 215, 229, 209, 255, 220, 247, 226, 255, 219, 245, 225, 255, 220, 241, 225, 255, 223, 245, 226, 255, 227, 247, 227, 255, 229, 245, 227, 255, 227, 240, 227, 255, 223, 238, 227, 255, 217, 238, 226, 255, 219, 237, 224, 255, 223, 234, 225, 255, 224, 232, 226, 255, 223, 237, 227, 255, 219, 240, 226, 255, 216, 242, 225, 255, 218, 240, 225, 255, 224, 238, 226, 255, 229, 238, 227, 255, 231, 240, 226, 255, 229, 238, 225, 255, 224, 235, 223, 255, 218, 233, 221, 255, 210, 231, 221, 255, 202, 229, 221, 255, 207, 231, 221, 255, 214, 232, 220, 255, 220, 235, 218, 255, 224, 236, 216, 255, 225, 235, 213, 255, 224, 232, 210, 255, 227, 252, 224, 255, 222, 247, 224, 255, 221, 242, 226, 255, 220, 240, 227, 255, 223, 242, 227, 255, 224, 240, 227, 255, 223, 238, 227, 255, 219, 238, 227, 255, 214, 240, 226, 255, 213, 238, 225, 255, 217, 235, 224, 255, 221, 235, 225, 255, 224, 240, 226, 255, 225, 245, 225, 255, 224, 247, 226, 255, 220, 245, 225, 255, 223, 240, 225, 255, 227, 238, 226, 255, 229, 238, 225, 255, 227, 238, 224, 255, 223, 239, 222, 255, 217, 238, 221, 255, 209, 235, 222, 255, 203, 231, 222, 255, 212, 232, 222, 255, 220, 237, 221, 255, 227, 240, 219, 255, 233, 242, 217, 255, 235, 240, 214, 255, 233, 237, 211, 255, 233, 247, 221, 255, 224, 245, 223, 255, 220, 240, 225, 255, 219, 236, 226, 255, 220, 236, 227, 255, 224, 236, 226, 255, 225, 235, 227, 255, 224, 237, 227, 255, 220, 238, 227, 255, 214, 237, 226, 255, 220, 234, 224, 255, 227, 236, 223, 255, 233, 242, 225, 255, 235, 247, 226, 255, 233, 252, 227, 255, 227, 247, 226, 255, 221, 242, 225, 255, 223, 237, 224, 255, 224, 238, 223, 255, 223, 242, 223, 255, 219, 243, 224, 255, 213, 242, 223, 255, 206, 238, 222, 255, 206, 233, 222, 255, 215, 235, 222, 255, 224, 240, 221, 255, 233, 245, 219, 255, 239, 247, 217, 255, 243, 245, 214, 255, 239, 240, 211, 255, 235, 242, 222, 255, 225, 240, 222, 255, 218, 237, 224, 255, 220, 236, 225, 255, 227, 238, 226, 255, 233, 239, 225, 255, 235, 238, 226, 255, 233, 235, 227, 255, 227, 235, 226, 255, 220, 234, 225, 255, 224, 232, 223, 255, 233, 235, 224, 255, 239, 240, 226, 255, 243, 245, 227, 255, 239, 247, 227, 255, 233, 245, 227, 255, 224, 241, 226, 255, 218, 237, 224, 255, 219, 239, 224, 255, 218, 243, 225, 255, 214, 246, 226, 255, 209, 243, 225, 255, 203, 239, 224, 255, 207, 234, 222, 255, 216, 236, 222, 255, 225, 242, 221, 255, 235, 247, 219, 255, 243, 252, 217, 255, 250, 247, 214, 255, 243, 242, 211, 255, 233, 236, 224, 255, 224, 235, 223, 255, 216, 237, 222, 255, 224, 240, 223, 255, 233, 242, 224, 255, 239, 243, 224, 255, 243, 242, 225, 255, 239, 238, 226, 255, 233, 233, 225, 255, 224, 235, 224, 255, 225, 236, 222, 255, 235, 235, 224, 255, 243, 237, 226, 255, 250, 241, 227, 255, 243, 245, 227, 255, 235, 247, 227, 255, 225, 245, 226, 255, 224, 240, 224, 255, 225, 238, 225, 255, 224, 242, 226, 255, 220, 243, 227, 255, 214, 242, 226, 255, 207, 238, 225, 255, 206, 233, 223, 255, 215, 235, 221, 255, 224, 240, 220, 255, 233, 245, 218, 255, 239, 247, 216, 255, 243, 245, 213, 255, 239, 240, 210, 255, 227, 232, 226, 255, 220, 235, 225, 255, 216, 240, 224, 255, 225, 245, 222, 255, 235, 247, 221, 255, 243, 246, 222, 255, 250, 243, 223, 255, 243, 239, 224, 255, 235, 237, 223, 255, 225, 240, 223, 255, 224, 242, 224, 255, 233, 240, 223, 255, 239, 237, 225, 255, 243, 242, 226, 255, 239, 247, 227, 255, 233, 252, 226, 255, 227, 247, 225, 255, 233, 242, 224, 255, 235, 236, 226, 255, 233, 238, 227, 255, 227, 239, 227, 255, 220, 238, 227, 255, 212, 235, 226, 255, 204, 231, 224, 255, 212, 232, 222, 255, 220, 237, 221, 255, 227, 240, 218, 255, 233, 242, 215, 255, 235, 240, 212, 255, 233, 237, 209, 255, 220, 230, 227, 255, 214, 236, 226, 255, 215, 242, 225, 255, 224, 247, 223, 255, 233, 252, 221, 255, 239, 247, 220, 255, 243, 242, 221, 255, 239, 238, 222, 255, 233, 240, 224, 255, 224, 245, 225, 255, 220, 247, 226, 255, 227, 245, 225, 255, 233, 240, 224, 255, 235, 240, 225, 255, 233, 245, 226, 255, 227, 247, 225, 255, 233, 245, 224, 255, 239, 240, 223, 255, 243, 235, 225, 255, 239, 233, 226, 255, 233, 234, 227, 255, 224, 233, 226, 255, 215, 232, 226, 255, 208, 235, 225, 255, 213, 236, 224, 255, 219, 235, 222, 255, 223, 235, 220, 255, 225, 236, 217, 255, 225, 235, 213, 255, 224, 232, 209, 255, 217, 229, 227, 255, 209, 235, 227, 255, 214, 240, 226, 255, 220, 245, 224, 255, 227, 247, 221, 255, 233, 245, 221, 255, 235, 240, 221, 255, 233, 236, 223, 255, 227, 242, 225, 255, 220, 247, 226, 255, 214, 252, 227, 255, 220, 247, 226, 255, 224, 242, 225, 255, 225, 237, 224, 255, 224, 240, 225, 255, 226, 242, 226, 255, 235, 240, 225, 255, 243, 237, 224, 255, 250, 232, 224, 255, 243, 228, 225, 255, 235, 229, 226, 255, 225, 232, 226, 255, 216, 237, 227, 255, 210, 240, 226, 255, 217, 242, 225, 255, 223, 240, 223, 255, 227, 237, 221, 255, 229, 234, 218, 255, 227, 232, 214, 255, 223, 229, 210, 255, 218, 232, 227, 255, 211, 234, 226, 255, 216, 237, 225, 255, 219, 240, 223, 255, 223, 242, 222, 255, 224, 240, 222, 255, 225, 238, 222, 255, 224, 239, 224, 255, 220, 240, 226, 255, 214, 245, 227, 255, 207, 247, 227, 255, 212, 245, 227, 255, 215, 240, 226, 255, 216, 235, 225, 255, 221, 236, 226, 255, 229, 236, 227, 255, 236, 235, 226, 255, 241, 232, 225, 255, 243, 229, 224, 255, 239, 225, 224, 255, 233, 229, 226, 255, 224, 235, 227, 255, 215, 240, 227, 255, 210, 245, 227, 255, 218, 247, 226, 255, 224, 245, 224, 255, 229, 240, 221, 255, 231, 237, 218, 255, 229, 234, 214, 255, 224, 230, 211, 255, 217, 234, 226, 255, 211, 237, 225, 255, 217, 238, 224, 255, 220, 237, 222, 255, 221, 236, 222, 255, 220, 238, 222, 255, 219, 242, 224, 255, 215, 243, 225, 255, 212, 242, 226, 255, 208, 240, 226, 255, 204, 242, 227, 255, 204, 240, 226, 255, 207, 237, 225, 255, 214, 240, 226, 255, 223, 242, 227, 255, 231, 240, 227, 255, 237, 237, 227, 255, 240, 232, 226, 255, 238, 231, 226, 255, 234, 230, 225, 255, 227, 230, 225, 255, 220, 236, 226, 255, 212, 242, 227, 255, 209, 247, 226, 255, 217, 252, 225, 255, 223, 247, 223, 255, 227, 242, 221, 255, 229, 238, 218, 255, 227, 235, 214, 255, 223, 231, 210, 255, 213, 235, 227, 255, 210, 238, 226, 255, 216, 240, 225, 255, 219, 238, 223, 255, 220, 235, 222, 255, 219, 239, 223, 255, 216, 243, 225, 255, 210, 246, 226, 255, 208, 243, 227, 255, 208, 239, 226, 255, 207, 236, 226, 255, 205, 235, 225, 255, 204, 240, 224, 255, 213, 245, 225, 255, 221, 247, 226, 255, 229, 245, 227, 255, 235, 240, 226, 255, 237, 236, 227, 255, 235, 235, 227, 255, 229, 234, 226, 255, 222, 232, 225, 255, 215, 235, 225, 255, 207, 240, 226, 255, 206, 245, 225, 255, 213, 247, 224, 255, 219, 245, 222, 255, 223, 240, 220, 255, 224, 237, 217, 255, 223, 234, 213, 255, 219, 230, 209, 255, 217, 234, 227, 255, 216, 237, 227, 255, 212, 238, 226, 255, 216, 237, 224, 255, 217, 234, 222, 255, 216, 238, 224, 255, 212, 242, 226, 255, 208, 243, 227, 255, 210, 242, 227, 255, 211, 238, 227, 255, 210, 233, 227, 255, 207, 236, 226, 255, 204, 242, 225, 255, 210, 247, 224, 255, 218, 252, 225, 255, 224, 247, 226, 255, 229, 242, 227, 255, 231, 238, 227, 255, 229, 238, 227, 255, 224, 237, 227, 255, 218, 234, 226, 255, 210, 232, 224, 255, 204, 237, 224, 255, 203, 240, 223, 255, 208, 242, 222, 255, 213, 240, 221, 255, 217, 237, 218, 255, 218, 236, 215, 255, 217, 233, 212, 255, 213, 229, 208, 255, 220, 232, 227, 255, 219, 234, 226, 255, 216, 235, 225, 255, 210, 234, 224, 255, 211, 232, 222, 255, 210, 235, 223, 255, 207, 238, 225, 255, 208, 239, 226, 255, 211, 238, 227, 255, 212, 235, 227, 255, 211, 231, 227, 255, 208, 235, 227, 255, 204, 240, 226, 255, 205, 245, 224, 255, 212, 247, 223, 255, 218, 245, 225, 255, 221, 240, 226, 255, 223, 238, 227, 255, 221, 240, 227, 255, 218, 238, 226, 255, 212, 235, 225, 255, 205, 231, 223, 255, 201, 233, 222, 255, 203, 235, 221, 255, 206, 237, 220, 255, 208, 240, 218, 255, 209, 242, 216, 255, 210, 240, 213, 255, 209, 237, 211, 255, 206, 232, 208, 255, 221, 230, 226, 255, 220, 230, 227, 255, 217, 231, 226, 255, 211, 230, 225, 255, 205, 228, 223, 255, 204, 231, 222, 255, 205, 233, 224, 255, 209, 234, 225, 255, 211, 233, 226, 255, 211, 231, 226, 255, 210, 228, 227, 255, 207, 232, 226, 255, 203, 237, 225, 255, 200, 240, 223, 255, 206, 242, 222, 255, 211, 240, 224, 255, 214, 237, 225, 255, 215, 237, 226, 255, 214, 238, 226, 255, 211, 237, 225, 255, 206, 234, 226, 255, 204, 231, 225, 255, 207, 233, 224, 255, 212, 236, 222, 255, 215, 240, 220, 255, 216, 245, 217, 255, 215, 247, 215, 255, 212, 245, 213, 255, 207, 240, 210, 255, 201, 235, 207, 255, 220, 230, 227, 255, 219, 228, 227, 255, 216, 226, 227, 255, 210, 225, 226, 255, 204, 227, 224, 255, 207, 229, 222, 255, 212, 230, 222, 255, 215, 229, 224, 255, 216, 228, 226, 255, 215, 226, 227, 255, 212, 224, 227, 255, 208, 229, 227, 255, 207, 232, 226, 255, 206, 236, 224, 255, 205, 238, 221, 255, 207, 239, 222, 255, 210, 238, 223, 255, 211, 235, 224, 255, 210, 235, 225, 255, 207, 234, 226, 255, 205, 232, 227, 255, 209, 229, 226, 255, 214, 233, 225, 255, 220, 236, 223, 255, 224, 242, 221, 255, 225, 247, 218, 255, 224, 252, 214, 255, 220, 247, 212, 255, 214, 242, 209, 255, 207, 236, 206, 255, 217, 234, 226, 255, 216, 233, 227, 255, 212, 231, 226, 255, 207, 229, 225, 255, 207, 232, 223, 255, 214, 235, 222, 255, 220, 236, 222, 255, 224, 235, 223, 255, 225, 232, 225, 255, 224, 229, 226, 255, 220, 229, 227, 255, 215, 230, 226, 255, 216, 233, 225, 255, 215, 238, 223, 255, 212, 242, 222, 255, 208, 243, 221, 255, 207, 242, 221, 255, 208, 238, 224, 255, 207, 233, 226, 255, 205, 230, 227, 255, 207, 228, 227, 255, 213, 227, 227, 255, 220, 231, 226, 255, 227, 235, 224, 255, 233, 240, 221, 255, 235, 245, 218, 255, 233, 247, 214, 255, 227, 245, 211, 255, 220, 240, 208, 255, 212, 235, 205, 255, 211, 239, 225, 255, 210, 238, 226, 255, 207, 235, 225, 255, 204, 232, 226, 255, 212, 237, 225, 255, 220, 240, 224, 255, 227, 242, 222, 255, 233, 240, 222, 255, 235, 237, 224, 255, 233, 232, 225, 255, 227, 235, 226, 255, 224, 236, 225, 255, 225, 235, 224, 255, 224, 239, 222, 255, 220, 243, 222, 255, 214, 246, 221, 255, 207, 243, 221, 255, 204, 239, 223, 255, 203, 234, 225, 255, 204, 229, 226, 255, 209, 227, 227, 255, 215, 226, 226, 255, 224, 228, 225, 255, 233, 232, 223, 255, 239, 237, 221, 255, 243, 240, 218, 255, 239, 242, 214, 255, 233, 240, 211, 255, 224, 237, 208, 255, 215, 233, 204, 255, 207, 243, 223, 255, 204, 242, 225, 255, 201, 238, 226, 255, 206, 235, 227, 255, 215, 240, 226, 255, 224, 245, 225, 255, 233, 247, 223, 255, 239, 245, 221, 255, 243, 240, 222, 255, 239, 237, 223, 255, 233, 240, 224, 255, 233, 242, 223, 255, 235, 240, 222, 255, 233, 238, 222, 255, 227, 242, 222, 255, 220, 243, 221, 255, 212, 242, 220, 255, 203, 238, 222, 255, 198, 233, 224, 255, 203, 228, 225, 255, 209, 229, 226, 255, 216, 229, 225, 255, 225, 231, 224, 255, 235, 231, 222, 255, 243, 233, 220, 255, 250, 237, 217, 255, 243, 240, 213, 255, 235, 242, 210, 255, 225, 240, 207, 255, 216, 237, 204, 255, 206, 246, 224, 255, 199, 244, 226, 255, 203, 241, 227, 255, 207, 237, 227, 255, 216, 242, 227, 255, 225, 247, 226, 255, 235, 252, 224, 255, 243, 247, 221, 255, 250, 242, 220, 255, 243, 240, 221, 255, 235, 245, 222, 255, 239, 247, 222, 255, 243, 245, 222, 255, 239, 242, 221, 255, 233, 240, 221, 255, 224, 239, 220, 255, 215, 238, 218, 255, 206, 235, 221, 255, 197, 231, 222, 255, 200, 229, 223, 255, 207, 232, 224, 255, 215, 235, 223, 255, 224, 236, 222, 255, 233, 235, 221, 255, 239, 235, 218, 255, 243, 240, 215, 255, 239, 245, 212, 255, 233, 247, 209, 255, 224, 245, 206, 255, 215, 240, 203, 255, 203, 246, 223, 255, 207, 247, 225, 255, 212, 245, 226, 255, 215, 240, 227, 255, 216, 240, 226, 255, 224, 245, 225, 255, 233, 247, 223, 255, 239, 245, 221, 255, 243, 240, 218, 255, 239, 242, 220, 255, 235, 247, 221, 255, 243, 252, 221, 255, 250, 247, 221, 255, 243, 247, 220, 255, 235, 245, 219, 255, 225, 240, 218, 255, 216, 235, 217, 255, 207, 231, 218, 255, 198, 228, 220, 255, 199, 232, 221, 255, 203, 237, 221, 255, 212, 240, 221, 255, 220, 242, 220, 255, 227, 240, 218, 255, 233, 237, 216, 255, 235, 242, 213, 255, 233, 247, 211, 255, 227, 252, 208, 255, 220, 247, 205, 255, 212, 242, 202, 255, 207, 247, 222, 255, 214, 252, 224, 255, 220, 247, 225, 255, 224, 242, 226, 255, 225, 237, 225, 255, 224, 240, 224, 255, 227, 242, 222, 255, 233, 240, 220, 255, 235, 237, 217, 255, 233, 240, 218, 255, 233, 245, 219, 255, 239, 247, 219, 255, 243, 247, 219, 255, 239, 252, 218, 255, 233, 247, 217, 255, 224, 242, 216, 255, 215, 236, 214, 255, 206, 230, 215, 255, 201, 229, 217, 255, 207, 235, 218, 255, 212, 240, 218, 255, 215, 245, 218, 255, 216, 247, 217, 255, 220, 245, 215, 255, 224, 240, 213, 255, 225, 240, 211, 255, 224, 245, 209, 255, 220, 247, 206, 255, 214, 245, 203, 255, 207, 240, 200, 255, 212, 245, 221, 255, 220, 247, 222, 255, 227, 245, 223, 255, 233, 240, 224, 255, 235, 235, 223, 255, 233, 237, 222, 255, 227, 240, 221, 255, 224, 242, 218, 255, 225, 240, 215, 255, 224, 238, 216, 255, 227, 240, 217, 255, 233, 242, 217, 255, 235, 245, 217, 255, 233, 247, 216, 255, 227, 245, 214, 255, 220, 240, 213, 255, 212, 236, 212, 255, 203, 232, 212, 255, 207, 230, 213, 255, 214, 236, 214, 255, 220, 242, 214, 255, 224, 247, 214, 255, 225, 252, 213, 255, 224, 247, 212, 255, 223, 242, 210, 255, 224, 242, 208, 255, 223, 247, 206, 255, 219, 252, 204, 255, 213, 247, 201, 255, 206, 242, 198, 255, 215, 240, 218, 255, 224, 242, 220, 255, 233, 240, 221, 255, 239, 237, 221, 255, 243, 235, 221, 255, 239, 240, 220, 255, 233, 245, 218, 255, 224, 247, 216, 255, 216, 245, 213, 255, 215, 240, 213, 255, 220, 236, 214, 255, 224, 237, 214, 255, 225, 240, 214, 255, 224, 242, 213, 255, 220, 241, 212, 255, 214, 242, 210, 255, 207, 240, 209, 255, 203, 237, 209, 255, 212, 232, 210, 255, 220, 235, 211, 255, 227, 240, 211, 255, 233, 245, 210, 255, 235, 247, 209, 255, 233, 245, 208, 255, 229, 240, 206, 255, 229, 240, 205, 255, 227, 245, 203, 255, 223, 247, 201, 255, 217, 245, 199, 255, 209, 240, 196, 255, 216, 235, 215, 255, 225, 236, 217, 255, 235, 235, 218, 255, 243, 232, 218, 255, 250, 236, 218, 255, 243, 242, 217, 255, 235, 247, 215, 255, 225, 252, 213, 255, 216, 247, 210, 255, 208, 242, 210, 255, 212, 236, 211, 255, 215, 232, 211, 255, 216, 236, 211, 255, 215, 240, 210, 255, 212, 245, 209, 255, 207, 247, 206, 255, 201, 245, 205, 255, 206, 240, 206, 255, 215, 235, 207, 255, 224, 232, 208, 255, 233, 237, 207, 255, 239, 240, 206, 255, 243, 242, 206, 255, 239, 240, 205, 255, 233, 237, 203, 255, 231, 237, 202, 255, 229, 240, 200, 255, 224, 242, 198, 255, 218, 240, 196, 255, 210, 237, 193, 255, 215, 229, 212, 255, 224, 230, 213, 255, 233, 229, 214, 255, 239, 229, 214, 255, 243, 235, 214, 255, 239, 240, 213, 255, 233, 245, 212, 255, 224, 247, 210, 255, 215, 245, 207, 255, 206, 240, 206, 255, 203, 235, 207, 255, 206, 230, 208, 255, 207, 236, 207, 255, 206, 242, 206, 255, 203, 247, 205, 255, 199, 252, 203, 255, 198, 247, 202, 255, 207, 242, 203, 255, 216, 236, 204, 255, 225, 230, 204, 255, 235, 232, 204, 255, 243, 235, 203, 255, 250, 236, 202, 255, 243, 235, 201, 255, 235, 232, 200, 255, 229, 232, 199, 255, 227, 235, 197, 255, 223, 236, 195, 255, 217, 235, 193, 255, 209, 232, 191, 255 ),
"format": "RGBA8",
"height": 30,
"mipmaps": false,
"width": 30
}

[sub_resource type="ImageTexture" id=10]
image = SubResource( 12 )
size = Vector2( 30, 30 )

[node name="Spatial" type="Spatial"]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0690393, 2.68748, 5.6578 )
fov = 90.0
size = 7.47502
script = ExtResource( 2 )
max_speed = Vector3( 4, 4, 4 )

[node name="ShaderQuad" type="MeshInstance" parent="Camera"]
extra_cull_margin = 16384.0
mesh = SubResource( 8 )
material/0 = SubResource( 11 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.43577, 0.718483, -0.542113, -0.0508906, 0.621014, 0.782146, 0.898618, -0.313248, 0.307183, -4.53003, 2.29896, 0 )
light_color = Color( 0.490196, 0.509804, 0.592157, 1 )
shadow_enabled = true

[node name="CSGBox" type="CSGBox" parent="."]
transform = Transform( 0.771991, 0, -0.635634, 0, 1, 0, 0.635634, 0, 0.771991, 2.45191, 1.03751, 1.92876 )

[node name="Plane" type="MeshInstance" parent="."]
transform = Transform( 5.43932, 0, 0, 0, 1, 0, 0, 0, 5.43932, 0.379786, 0, -0.477826 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CloudNoiseCreator" type="Spatial" parent="."]
script = ExtResource( 3 )
RUN_IN_EDITOR = false
IMAGE_SIZE_PIXELS = 30
SLICE = 1.0
PERSISTENCE = 1.0
R_POINTS_PER_AXIS = 5
R_INTENSITY_MULTIPLIER = 1.1
G_POINTS_PER_AXIS = 6
G_INTENSITY_MULTIPLIER = 0.7
B_POINTS_PER_AXIS = 8
B_INTENSITY_MULTIPLIER = 0.7

[node name="CloudVolume" type="MeshInstance" parent="CloudNoiseCreator"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 1, 0.0610111, 2.43951, 4.76837e-07 )
mesh = SubResource( 3 )
skeleton = NodePath("../..")
material/0 = SubResource( 4 )

[node name="TextureVisualizer" type="TextureRect" parent="CloudNoiseCreator"]
visible = false
margin_right = 130.0
margin_bottom = 130.0
texture = SubResource( 10 )
expand = true
